#pragma once
#include "../hikanyan_library/include/system/Singleton.h"
class GameManager:public Singleton<GameManager>
{
public:
    
};
