#pragma once
#include "WeaponBase.h"

class Sword : public WeaponBase
{
public:
    void use() override
    {
        // 剣を振る動作を定義
    }
};
